# ChangeLog for app-backup/bacula
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/bacula/ChangeLog,v 1.166 2014/06/21 10:01:19 tomjbe Exp $

*bacula-7.0.4 (21 Jun 2014)

  21 Jun 2014; Thomas Beierlein <tomjbe@gentoo.org> +bacula-7.0.4.ebuild:
  Bugfix release

*bacula-7.0.2 (10 Apr 2014)

  10 Apr 2014; Thomas Beierlein <tomjbe@gentoo.org> +bacula-7.0.2.ebuild,
  +files/7.0.2/bacula-7.0.2-depend.patch,
  +files/7.0.2/bacula-7.0.2-fix-static.patch:
  Major version bump

  05 Apr 2014; Pacho Ramos <pacho@gentoo.org> bacula-5.2.13-r2.ebuild:
  Alias value is not really needed here, bug #504370 by Fabian Koster

*bacula-5.2.13-r2 (01 Feb 2014)

  01 Feb 2014; Pacho Ramos <pacho@gentoo.org> +bacula-5.2.13-r2.ebuild,
  -bacula-5.2.13-r1.ebuild:
  Fix systemd unit files, bug #497748

*bacula-5.2.13-r1 (11 Jan 2014)

  11 Jan 2014; Pacho Ramos <pacho@gentoo.org> +bacula-5.2.13-r1.ebuild:
  Install upstream unit files (#497748 by Khumba)

  20 May 2013; Jeroen Roovers <jer@gentoo.org> bacula-5.0.3-r3.ebuild,
  bacula-5.2.12.ebuild, bacula-5.2.13.ebuild:
  Remove HPPA keywording (bug #409229).

  01 May 2013; Thomas Beierlein <tomjbe@gentoo.org> bacula-5.2.13.ebuild:
  Fix logrotate config file (bug 258187, comment #4). Thanks Ortwin.

  23 Apr 2013; Thomas Beierlein <tomjbe@gentoo.org> bacula-5.2.13.ebuild:
  Fix desktop file category (bug #466688). Use CXXFLAGS instead CFLAGS (bug
  466694). Thanks ago for reporting

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bacula-5.2.13.ebuild:
  Stable for sparc, wrt bug #466636

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bacula-5.2.13.ebuild:
  Stable for ppc, wrt bug #466636

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bacula-5.2.13.ebuild:
  Stable for x86, wrt bug #466636

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bacula-5.2.13.ebuild:
  Stable for amd64, wrt bug #466636

*bacula-5.2.13 (14 Mar 2013)
