@@ -31,18 +31,20 @@ DIST bacula-5.2.12.tar.gz 4147847 SHA256 360435634e28881b3fedb0dc1901b9c9be1895c
 DIST bacula-5.2.13.tar.gz 4243395 SHA256 a4bed458bf001889bd06bf31671b5d9908055a1d1e8113fd750ae4d326607ad8 SHA512 dfdff353f5b6ed4d85013dc292526706bbd67066f7057a114012172926c819c8df1eb8779166d5a90db3a49a5584f0a8daf7566cc93cf4fa3f1bdda245b55cf0 WHIRLPOOL f559a3650ae45e149a80cdc74ab84e32c94f492321c2222c18003bacfb6690615befc3a37826055f6c436a4af6ace4b81497181f2ec4f641b0ad3a13817488a7
 DIST bacula-7.0.2.tar.gz 3591658 SHA256 cc4f6abf368a95e4c4eba5296e8a3a753f6eb22f4f5fbc19fa2b1253c266999d SHA512 ed47d64019224594be20a1a56aec41128ae3312b896c06f154024cc48e3b350e906230cb00fe8622525f3523e74fa256e0d3f83816e2e9fb5c724253bfa50aa3 WHIRLPOOL d47a6883aff31e35f4df1f25ef8d39a46ffc965c9ce110e23407036ffcea45c35f5664c832462184ac4270b83a56cc8b56b1216b71d7734f6aa77f1b5f910ff1
 DIST bacula-7.0.4.tar.gz 3596569 SHA256 ebf802b843a95f6526e82dd181dff7cd7dc7d1fdc55cec8636e0fe3af69acf7e SHA512 c0ba131b8592c0e0ff1082b378d65512a2e8536005f095a8255c4279616285210a999453a1e2ad0956627b2250e7f58eaa1df6b09f36a67596e1d09a8bc6c8ab WHIRLPOOL 43481e33cb3e7ffc2fdba65ff64b670bdb364ba6b49d2306b9b3fbdee9f90bccfe41a19f659ea60f00ed6906a4946a07e7e0220ec81135bde41935ec1021ea4e
+DIST bacula-7.0.5.tar.gz 3216406 SHA256 1457849eb33011b43371801b62ffa13d29bebe51be8d5a36da563b87bb094a49 SHA512 df7908769fd13a1cb2e0491d3773577db40c0f1c010b887c6dc6d7e0bc0b408fbfc260e6d5a2a34975e5b424152c7f558b33aeedea45f366636739295641394b WHIRLPOOL 47642c52928d84a50c01adfb8afa49c0c9376cba3b0f709d0c5113cba3380e047ded04980ffad339deeb1ce6d3a8ec59f58cf1968223973def7074a446a09da5
 EBUILD bacula-5.0.3-r3.ebuild 10543 SHA256 25fcdd62a93698ce2b6e7e927c8da4bbca751849f52fef35e7e9722e38491f30 SHA512 9250c6ced8c2ef6282e4308149e5ac719214004b052f93ebf80084012cb578885bcabe63de77d0b9f7d38044c5f8d14b5775a4081fdb1e1337bbd4a1e3ad6c3e WHIRLPOOL 3c91648a65aacecea9d729cfe5d6c08972502dee4e36a38f03173703654ad4965ccc32fab40726a54b60c17dc33091ce3e3f9b60c10b4054553d4dbe0974da6b
 EBUILD bacula-5.2.12.ebuild 10808 SHA256 c62358645fdcf572baf9e539c58b35eb3d6d07a9f0800ab207839e6039479f1f SHA512 b6a21b177197e5e92ff1936a01670f299d740ff36ee279de046843f1a048083d6e895e89d96c40b584673db0cd0a5d6ba20d03ea767753c52a318f94e8190539 WHIRLPOOL e93703363a53e373dffb65fc4e4c2ee14ff4206a010480b8a94d93d0f5fd1d69a43f2b005cc40a8625902778773f2ae6e34af83cb7124b33afe1ec2846fc6c51
 EBUILD bacula-5.2.13-r2.ebuild 11567 SHA256 de739ed9524718bda68f9e016f9ecda0289c46f08ca2865435569f81bb4244de SHA512 2a183ae89cd170114d9f4910b4391a4a929273f83b28f921fea662b74cff31fff1956d0ee29401c8057d9836b9aa687291a14494dfb86dbb95b444331e05f705 WHIRLPOOL ad5f97534c585b85328a3accb0dce0ed64695b2abf444f27281812558fbe23af1e670bfb73ab65cc72542351d203886d7ea68954caa9369fa7cae7efc1721156
 EBUILD bacula-5.2.13.ebuild 11113 SHA256 b8ce301cfd590bb0ccc43b460dbd8e3a74328ad5c1ab59a4f85815c65442b0ae SHA512 f4154e0014d662629774d404ae3a76a8ff5ab8d6aa924285f54df40db88a4b2c8fdfa482bbfc698e965ee296ad74f8f4c04bd4aa45e79484050945412af139ee WHIRLPOOL d531235839aed93bd60e10c4ed79f1cba9207a57590a274680fbea037a57a7b15cbf84fe2c5f217bb41e5b7c63ed037aab9d4e31fe78d062390cd93c6e6b3a69
 EBUILD bacula-7.0.2.ebuild 11284 SHA256 9b5ba731174e80e92453ad5faa7fcdb8c769cb41f53469cfa78cce9fe6bb7fbb SHA512 6a43386e45ae73b7a945734eaf4de40685866e2b3383d60e8e30f21d47253e5b1ab963a8459616cd504463f2a028c1d3c8d6cc3e6fceac13a57b0b0f498fd0bb WHIRLPOOL 6ae08e2af14c5f27b1d5b0430272041fe9b30e4494610d1fb60221ad1df8c2f45b72a111045201d55ee40741ced4f2714d14f05522bb740e69d6271dc0cb0d39
 EBUILD bacula-7.0.4.ebuild 11284 SHA256 b8d3e0afb6d9d5acf38401ffa4962393a4175cfca5f925548602917053a747e8 SHA512 3d0b3c7ea9a911d9476c46831d23c9be99b78e6f39dbd418bc829ebf56499653c0659cec6eb4fdc997d04e8fb65bd87f0482997852749150cd60c50d96c41ab8 WHIRLPOOL f51889e86ebbbe58ddc5172add46e6a5aca76ff240535efb63eb8fea6fb5642f3465d8b28b6afbbb2972423ec26eadd0a6d628061b010f837d0161111e10e9b8
-MISC ChangeLog 47242 SHA256 4ef0bde428f1f3f857c059159159b52c35b9cff6c4cbcfadbaa8c1b31c410dc2 SHA512 e251283b53315e6fa18efdeb4014c0e5771b82c5c2f2816b0cd7a663cd1060ecd6573653687ead5a1e06471ac236fe6e10468868fbc5eadb7b390b6102b303d0 WHIRLPOOL 84e0d3232d36c796ed2d9c2abe24c3f79ae9c4fcef68ef4173566654e785c1de911d9c53c8ea58fc6a46f79eb47ec28f2dc9382223b93c78f4f380aeaebadca3
+EBUILD bacula-7.0.5.ebuild 11192 SHA256 1a4d499bddd44ef9003b2b25906c29b8ddc309ed4ee3a8eb2c3165133da9a3c3 SHA512 3b0be78e2c86d83f13df832bff5a90c5857a7b609383376158a2ad298ee96a75df3482275ea3acb6e30232ccac1f423c6e234e79de7193f9888f27aa7d398ce6 WHIRLPOOL 537124241530026a206d59be546813770c3830c0e0950c7600cf749e596ebee0084ca6916c946c99372e6784088de680dc510837ef26935b002c9fa24e2d5e40
+MISC ChangeLog 47363 SHA256 2d25afb2753f9cab161292ebcd76e235a96d47d11717faf64f83f8cb9948c995 SHA512 7e67c9332a9fd8010c95f45535d08e561b7e51409d39aec6c5284937e448406ccac3f2dfbd2529c2737384db23945d1accbee213673037d1712fd223cb48e164 WHIRLPOOL 0b1fe75149a84c582a32fd4299dc901f820dce72b2cb1eb86d64dc0f0f34d666b42f65a76e499e78c8de8095cb02b12eceb8c2cebd9dd98f3bc129cbd8058e2f
 MISC metadata.xml 561 SHA256 5ae48a7761fc21b5b664aa7650329592b390461fa5cbd9c18c0158f7ed3664ce SHA512 f2540435f1ee25cdecf8a2d278dff8313b0e0a884e6be0430699ede95ab912a0e5b33bab9f43212d2a037d5576fe937788323ac67b408e8cc5e9d0f96a07f08c WHIRLPOOL eefa9994a95a268bf677f5a369879f1ed4be7204696699dfbbeedc4bfb5e7166c6252df8d538f1966b2c568630fec3dcc1acf34c722ad96bdc2c95addd1b3712
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlOlV/kACgkQQe4uqXYgU9VnPwCfZeCUBjGPGBWD8zXJNgoNuhj5
-GY4AnROziQdRDrUtdylsjRflzBAc+hpU
-=dawE
+iEYEAREIAAYFAlPvEOcACgkQQe4uqXYgU9XQjgCfSj7bT2gg0Zzr8vt7NbIDZO/c
+7NIAoLeaIAp6WIRqjy0j26YgcOLP4gzm
+=Oiyj
 -----END PGP SIGNATURE-----
