@@ -2,23 +2,13 @@
 Hash: SHA256
 
 DIST afm-0.2.2.gem 17408 SHA256 c83e698e759ab0063331ff84ca39c4673b03318f4ddcbe8e90177dd01e4c721a SHA512 9325ec0baee12194253e053d162fae252c65e452d38ffb592908759c29669d1938dba877e152988b6acd25f556514936c8dc09895762254483aadf46b09858f1 WHIRLPOOL 4b3f22bf670e5bb0accfb351d8aca3cc8a780a3a6d0bba51741d755a7442aec0884212b9e291553403fff2f6bac0fa93cd5be3260a0b5849ac5d0699bac17696
-EBUILD afm-0.2.2.ebuild 723 SHA256 8c794a5579eeca0b9d1b6477a800ee56259e87e19161d04e7b54258bc0a7ec32 SHA512 527f4d9e5ffdc17bcebfc864cd121f0e64d1b2ead075500f54d919a0f457546ec38dbd70212bf08e1900ab2b0a44bb5db7e2007b7c93bf6e7cbc73e02782b4a5 WHIRLPOOL 4c66bcc34ba3be076f781a4944ebaf4e39c6ba9704dad845ebb171890b981a702998e2d89017918b73fe7dd151a476d82937ab7fb1f6b4e9dad917d5c8408dd6
-MISC ChangeLog 1209 SHA256 f612f74a90e1929c542853f2b367a576c4f7023bcdccdc1ad66b33c934933f7e SHA512 e9badb96eeb2dd37579856d01d7474bad121f06033a080e282fae84e6822aa6cba781f0b56e1064fb6c89446d7daf17580777ff6be43cbfcdf5a0586a408fd6e WHIRLPOOL ce1e749ab30fec87ce12b381490bbb82386e3b45d2ed83363bbcd5fd1c320a5eb32d7e609e361acb8a18addee64814b091a257d40f4506d19216380766c489ce
+EBUILD afm-0.2.2.ebuild 730 SHA256 e61b3e25dc54d729c4bfe05e1b68a6bfe70df408c0436bad27d8a2d58d8eddf3 SHA512 075d148de2c2c9e19cf2c8cc2bf6d4130a3abe70f14b650e52ada057b50a55edb2c39162f438fd87eb6662fe45db91560656de1d2aa720d8490841bfa8d71814 WHIRLPOOL 4c50e5c8887ae905372dd54e7071f6cbf6927d43fedd33ddc712c33e20d655f92da7c32e9ff0468f477c95aa9ab3ca7c2cfc396a283d268703d507c11a71000c
+MISC ChangeLog 1344 SHA256 19fd878adb1ce2438f81ed993a8887b8ec5276534896ab5a500e8a53ff9005de SHA512 b023bde53bd2fa1cd3fdfccf7edc8bdb9c34fdaa6745c035c3f7172fb1afdc0dd2e4622bd7253e331e292e1ab81e0fd1ff2b246167eee2415ce9b5c627cbcf51 WHIRLPOOL a40844bd326952a7e681558bece9cc3276a2c77787f20f089849c144d57b3bb9862507fd4abad7b82ef1b6476ea9a2086c9b23eb3ea4ad3c49c25535e6ae3cb8
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT6hItAAoJEJOE+m71LUu68BIP/i56LTZkK8GbPb/XGAwYPGOs
-CfOSyltmAIDg6W0PG4pNiZj07bdZHbOgI4RdtqCT5lgSVwR1w5NT+uWcdk5z9DyH
-ODDfHbgkpX3n4SADoU7xPywuxpBqvjV7WQjLrGAaxzWCPZuAI8Q4cjm1+tkigKoT
-w1bFyTBBZne0izjGh4lgduQIsw3+79HxLHwQdSip/WhK2UPSGCiYXYVMuzN/osVd
-T5+uSSieYxvJE5cKXaYyqEXEVy+eio/QD3HhfUK4yD78OPBlkl3gveD0FXnbkrK+
-zfTrWxBAnA9czxegJMcOtbOlNfo3fT4Y0NXeKNUrfJKsyqPofvC0ex5w9kOqQxFD
-gezd5WagoOxrm+1ygWSfDp52C6tmW7pDmt5ujhI8Ven77bB4ufxT/mOJ4i0cQK1K
-x5XftqmW+NQkXypG5eiDPJlSXku21UascL3F2OIYvvPHayCyUKjcJ4MzgC8/Pkkl
-rPS2QmHR0yf2oUAT5WdqxbrqUsPhJ6VtYAEByXWYd2/R+W3o8Rf/Wql8sRywOeoK
-fYsU0CiBaX2EvhfTYtDjsdUM24Z4jXDNcnleNdCXbwtVZuBKvTbsDvSPNzOsyNmV
-XfrGF2KC86grGgSj746Iel/WVquC9lLUB04T6ZWa8WAhZTxvaBL6TFYKpRmeTdes
-HwyrulHRaFo2eYyLmS3X
-=da+5
+iF4EAREIAAYFAlPvFS4ACgkQiIP6VqMIqNehjAEAlYvXeB4G67CUX7Saoa4LdreT
+BJDzhCX31mIOnYBp+GQA/1VSphG7IBiFUYcuXRNStxa9iF3HdZYKnfxsJPLx/Ncx
+=G7bK
 -----END PGP SIGNATURE-----
