@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/afm/afm-0.2.2.ebuild,v 1.3 2014/08/12 13:07:57 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/afm/afm-0.2.2.ebuild,v 1.4 2014/08/16 08:24:08 graaff Exp $
 
 EAPI=5
 USE_RUBY="ruby19 ruby20 ruby21 jruby"
@@ -21,7 +21,7 @@ IUSE="test"
 ruby_add_bdepend "test? ( dev-ruby/shoulda )"
 
 all_ruby_prepare() {
-	sed -i -e "/[Bb]undler/s/^/#/" test/helper.rb || die
+	sed -i -e "/[Bb]undler/s/^/#/" Rakefile test/helper.rb || die
 }
 
 each_ruby_test() {
