@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst prepare setup unpack
+DEPEND=dev-libs/gmp !bacula-clientonly? ( postgres? ( dev-db/postgresql-base[threads] ) mysql? ( virtual/mysql ) sqlite3? ( dev-db/sqlite:3 ) !bacula-nodir? ( virtual/mta ) ) qt4? ( dev-qt/qtsvg:4 x11-libs/qwt:5 ) logwatch? ( sys-apps/logwatch ) tcpd? ( >=sys-apps/tcp-wrappers-7.6 ) readline? ( >=sys-libs/readline-4.1 ) static? ( acl? ( virtual/acl[static-libs] ) sys-libs/zlib[static-libs] dev-libs/lzo[static-libs] sys-libs/ncurses[static-libs] ssl? ( dev-libs/openssl[static-libs] ) ) !static? ( acl? ( virtual/acl ) sys-libs/zlib dev-libs/lzo sys-libs/ncurses ssl? ( dev-libs/openssl ) ) virtual/pkgconfig
+DESCRIPTION=Featureful client/server network backup suite
+EAPI=5
+HOMEPAGE=http://www.bacula.org/
+IUSE=acl bacula-clientonly bacula-nodir bacula-nosd examples ipv6 logwatch mysql postgres qt4 readline +sqlite3 ssl static tcpd vim-syntax X
+KEYWORDS=~amd64 ~ppc ~sparc ~x86
+LICENSE=AGPL-3
+RDEPEND=dev-libs/gmp !bacula-clientonly? ( postgres? ( dev-db/postgresql-base[threads] ) mysql? ( virtual/mysql ) sqlite3? ( dev-db/sqlite:3 ) !bacula-nodir? ( virtual/mta ) ) qt4? ( dev-qt/qtsvg:4 x11-libs/qwt:5 ) logwatch? ( sys-apps/logwatch ) tcpd? ( >=sys-apps/tcp-wrappers-7.6 ) readline? ( >=sys-libs/readline-4.1 ) static? ( acl? ( virtual/acl[static-libs] ) sys-libs/zlib[static-libs] dev-libs/lzo[static-libs] sys-libs/ncurses[static-libs] ssl? ( dev-libs/openssl[static-libs] ) ) !static? ( acl? ( virtual/acl ) sys-libs/zlib dev-libs/lzo sys-libs/ncurses ssl? ( dev-libs/openssl ) ) !bacula-clientonly? ( !bacula-nosd? ( sys-block/mtx app-arch/mt-st ) ) vim-syntax? ( || ( app-editors/vim app-editors/gvim ) )
+REQUIRED_USE=|| ( ^^ ( mysql postgres sqlite3 ) bacula-clientonly ) static? ( bacula-clientonly )
+SLOT=0
+SRC_URI=mirror://sourceforge/bacula/bacula-7.0.5.tar.gz
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	40136c5fe0002a0d3937e869ae4ee0e2	qt4-r2	b40473dafd07d7c5fe4aef1c1b902f39	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=bace86608e2bb5808b84b7549e1766f9
